removed apps tab

--- a/index.html
+++ b/index.html
@@ -1,46 +1,3 @@
-<!-- Apps section -->
-        <div
-          data-section-id="apps"
-          class="section hidden h-full overflow-y-auto scrollbar-hide"
-        >
-          <div
-            class="m-auto w-full py-10 h-auto sm:w-10/12 lg:w-8/12 xl:w-6/12 animate-fade-in"
-          >
-            <div class="mx-4">
-              <h1 class="font-bold text-3xl mb-1">Apps</h1>
-              <p class="text-xs text-base-content/70 mb-4">
-                A place for small tools and prototypes. Coming soon.
-              </p>
-              <div class="mockup-window border bg-base-200">
-                <div class="px-6 py-10 text-center text-xs text-base-content/70">
-                  No public apps yet. I'm currently focused on dashboards,
-                  pipelines and internal tooling.
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>        <!-- Apps -->
-        <button
-          class="nav-link group my-4 flex w-24 select-none flex-col items-center justify-center"
-          data-section="apps"
-        >
-          <div class="nav-pill">
-            <svg
-              stroke="currentColor"
-              fill="currentColor"
-              stroke-width="0"
-              viewBox="0 0 448 512"
-              height="18"
-              width="18"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M422.19 109.95L256.21 9.07c-19.91-12.1-44.52-12.1-64.43 0L25.81 109.95c-5.32 3.23-5.29 11.27.06 14.46L224 242.55l198.14-118.14c5.35-3.19 5.38-11.22.05-14.46zm13.84 44.63L240 271.46v223.82c0 12.88 13.39 20.91 24.05 14.43l152.16-92.48c19.68-11.96 31.79-33.94 31.79-57.7v-197.7c0-6.41-6.64-10.43-11.97-7.25zM0 161.83v197.7c0 23.77 12.11 45.74 31.79 57.7l152.16 92.47c10.67 6.48 24.05-1.54 24.05-14.43V271.46L11.97 154.58C6.64 151.4 0 155.42 0 161.83z"
-              ></path>
-            </svg>
-          </div>
-          <span class="nav-label truncate text-sm text-base-content">Apps</span>
-        </button><!DOCTYPE html>
 <html lang="en" data-theme="winter">
   <head>
     <meta charset="utf-8" />
@@ -61,7 +18,7 @@
 
     <style>
       :root {
-        --sidebar-bg: #b0d3d2;
+        --sidebar-bg: rgba(176, 211, 210, 0.5);
         --project-card-active: rgba(176, 211, 210, 0.5);
         --project-card-inactive: rgba(176, 211, 210, 0.25);
         --accent: #008080;
@@ -214,29 +171,6 @@
           <span class="nav-label truncate text-sm text-base-content"
             >Portfolio</span
           >
-        </button>
-
-        <!-- Apps -->
-        <button
-          class="nav-link group my-4 flex w-24 select-none flex-col items-center justify-center"
-          data-section="apps"
-        >
-          <div class="nav-pill">
-            <svg
-              stroke="currentColor"
-              fill="currentColor"
-              stroke-width="0"
-              viewBox="0 0 448 512"
-              height="18"
-              width="18"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M422.19 109.95L256.21 9.07c-19.91-12.1-44.52-12.1-64.43 0L25.81 109.95c-5.32 3.23-5.29 11.27.06 14.46L224 242.55l198.14-118.14c5.35-3.19 5.38-11.22.05-14.46zm13.84 44.63L240 271.46v223.82c0 12.88 13.39 20.91 24.05 14.43l152.16-92.48c19.68-11.96 31.79-33.94 31.79-57.7v-197.7c0-6.41-6.64-10.43-11.97-7.25zM0 161.83v197.7c0 23.77 12.11 45.74 31.79 57.7l152.16 92.47c10.67 6.48 24.05-1.54 24.05-14.43V271.46L11.97 154.58C6.64 151.4 0 155.42 0 161.83z"
-              ></path>
-            </svg>
-          </div>
-          <span class="nav-label truncate text-sm text-base-content">Apps</span>
         </button>
       </nav>
 
@@ -594,29 +528,6 @@
                   >
                     <!-- Images injected by script.js -->
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Apps section -->
-        <div
-          data-section-id="apps"
-          class="section hidden h-full overflow-y-auto scrollbar-hide"
-        >
-          <div
-            class="m-auto w-full py-10 h-auto sm:w-10/12 lg:w-8/12 xl:w-6/12 animate-fade-in"
-          >
-            <div class="mx-4">
-              <h1 class="font-bold text-3xl mb-1">Apps</h1>
-              <p class="text-xs text-base-content/70 mb-4">
-                A place for small tools and prototypes. Coming soon.
-              </p>
-              <div class="mockup-window border bg-base-200">
-                <div class="px-6 py-10 text-center text-xs text-base-content/70">
-                  No public apps yet. I'm currently focused on dashboards,
-                  pipelines and internal tooling.
                 </div>
               </div>
             </div>
